--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "@lexical/react": "^0.14.2",
+    "@lexical/selection": "^0.14.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-menu": "^2.0.6",
+    "@radix-ui/react-menubar": "^1.0.4",
+    "@radix-ui/react-toolbar": "^1.0.4",
     "@radix-ui/themes": "^3.0.1",
     "@reduxjs/toolkit": "^2.2.2",
     "lexical": "^0.14.2",
