--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@lexical/react": "^0.14.2",
     "@lexical/selection": "^0.14.2",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-menu": "^2.0.6",
     "@radix-ui/react-menubar": "^1.0.4",
