--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-toolbar": "^1.0.4",
     "@radix-ui/themes": "^3.0.1",
     "@reduxjs/toolkit": "^2.2.2",
+    "@testing-library/react": "^15.0.2",
     "lexical": "^0.14.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
